--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,25 +1,43 @@
-html,
-body {
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&display=swap');
+*{
+  margin:0;
   padding: 0;
-  margin: 0;
-  font-family:monospace;
+  font-family: 'Raleway', sans-serif;
+  background: #f2f2f2;
 }
-
-a {
-  color: inherit;
+a{
   text-decoration: none;
+  color: #333;
 }
-
-* {
-  box-sizing: border-box;
+a:hover{
+  border-bottom: 2px solid rgb(245, 169, 30);
+  color: rgb(245, 169, 30);
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: black;
-    background: white;
-  }
+.content{
+  max-width: 960px;
+  margin: 0 auto;
+}
+nav{
+  margin: 10px auto 80px;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  border-bottom: 1px solid #ddd;
+}
+nav a{
+  margin-left: 12px;
+}
+nav .logo{
+  margin-right: auto;
+}
+footer{
+  display: block;
+  padding: 30px 0;
+  margin-top: 60px;
+  color:#777;
+  border-top: 1px solid #aeaeae;
+}
+footer a{
+  margin-right: 10px;
 }
